--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -1,23 +1,20 @@
 {% extends "learning_logs/base.html" %}
 
 {% block page_header %}
+  <!-- 定义一个带有标题和副标题的Jumbotron(Bootstrap中的类)   -->
   <div class="jumbotron">
-    <h1 class="display-3">Track your learning.</h1>
+    <h1 class="display-3">追踪你的学习</h1>
+    <p class="lead">创建自己的学习日志，记录你正在学习的主题列表。每当你学习到一个新的主题，就写下一个摘要，总结你所学到的知识。</p>
 
-    <p class="lead">Make your own Learning Log, and keep a list of the
-      topics you're learning about. Whenever you learn something new
-      about a topic, make an entry summarizing wha you've learned.
-    </p>
-
+    <!-- 如果用户未登录，则显示注册按钮   -->
     {% if not user.is_authenticated %}
-      <a class="btn btn-lg btn-primary" href="{% url 'users:register' %}"
-        role="button">Register &raquo;</a>
+      <a class="btn btn-lg btn-primary" href="{% url 'users:register' %}" role="button">注册 &raquo;</a>
     {% endif %}
-
   </div>
 {% endblock page_header %}
 
-
 {% block content %}
-  <p>Learning Log helps you keep track of your learning, for any topic you're learning about.</p>
+  <!-- 显示 Learning Log 网站的描述   -->
+  <p>Learning Log 可以帮助你追踪任何你正在学习的主题。</p>
 {% endblock content %}
+
